dataset1235/2025-2/1153765216/users/260676580/executions/2747719322_1626817775.log
== RUN (2025-08-26 16:50:25)
-- CODE: 
import math
r= float(input()) 
area_circulo = math.pi * r**2
volume_esfera = (4/3) * math.pi *r **3
print(f"{area_circulo:.3f}")
print(f"{volume_esfera:.3f}")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.280
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.510
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 16:50:26)
-- CODE: 
import math
r= float(input()) 
area_circulo = math.pi * r**2
volume_esfera = (4/3) * math.pi *r **3
print(f"{area_circulo:.3f}")
print(f"{volume_esfera:.3f}")

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.280
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.510
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 16:50:07)
-- CODE: 
import math
r= float(input()) 
area_circulo = math.pi * r**2
volume_esfera = (4/3) * math.pi *r **3
print(f"{area_circulo:.3f"}")
print(f"{volume_esfera:.3f}")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 5
    print(f"{area_circulo:.3f"}")
                              ^
SyntaxError: closing parenthesis '}' does not match opening parenthesis '('
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 5
    print(f"{area_circulo:.3f"}")
                              ^
SyntaxError: closing parenthesis '}' does not match opening parenthesis '('
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 5
    print(f"{area_circulo:.3f"}")
                              ^
SyntaxError: closing parenthesis '}' does not match opening parenthesis '('
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 5
    print(f"{area_circulo:.3f"}")
                              ^
SyntaxError: closing parenthesis '}' does not match opening parenthesis '('
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 5
    print(f"{area_circulo:.3f"}")
                              ^
SyntaxError: closing parenthesis '}' does not match opening parenthesis '('
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 5
    print(f"{area_circulo:.3f"}")
                              ^
SyntaxError: closing parenthesis '}' does not match opening parenthesis '('
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
